<resources>
    <string name="app_name">FairGO</string>
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="level_5">5</string>
    <string name="level_6">6</string>
    <string name="level_7">7</string>
    <string name="level_8">8</string>
    <string name="level_9">9</string>
    <string name="level_10">10</string>
    <string name="level_11">11</string>
    <string name="level_12">12</string>
    <string name="level_13">13</string>
    <string name="level_14">14</string>
    <string name="level_15">15</string>
    <string name="level_16">16</string>
    <string name="level_17">17</string>
    <string name="level_18">18</string>
    <string name="level_19">19</string>
    <string name="level_20">20</string>
    <string name="level_21">21</string>
    <string name="level_22">22</string>
    <string name="level_23">23</string>
    <string name="level_24">24</string>
    <string name="logo_description">Logo</string>
    <string name="button_play_description">Play</string>
    <string name="button_music_description">Music</string>
    <string name="button_privacy_policy_description">Privacy policy</string>
    <string name="button_back_description">Go back</string>
    <string name="privacy_policy_title">PRIVACY POLICY</string>
    <string name="privacy_policy_text">text</string>
    <string name="select_level">SELECT LEVEL</string>
    <string name="level_title">LVL: %d</string>
    <string name="level_7_title_example">LVL: 7</string>
    <string name="start_time_on_timer">00:00</string>
    <string name="timer_text">00:%02d</string>
    <string name="timer_end_game">01:00</string>
    <string name="found_example">FOUND: 0/6</string>
    <string name="found">FOUND: %d/%d</string>
    <string name="game_element_description">Game element</string>
    <string name="you_win">YOU WIN!</string>
    <string name="you_lose">YOU LOSE!</string>
    <string name="game_paused">GAME PAUSED</string>
    <string name="replay_description">Replay</string>
    <string name="home_description">Home</string>
    <string name="leave_pause_description">Leave pause</string>
    <string name="go_next_description">Go next</string>
</resources>