<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/clear_bg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="261.49dp"
        android:layout_height="250.12dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:foreground="@drawable/rounded_button_fg"
        android:contentDescription="@string/button_play_description"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play" />

    <ImageButton
        android:id="@+id/button_music"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:foreground="@drawable/rounded_button_fg"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_music_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play"
        app:srcCompat="@drawable/music_on" />

    <ImageButton
        android:id="@+id/button_privacy_policy"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:foreground="@drawable/rounded_button_fg"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_privacy_policy_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_music"
        app:srcCompat="@drawable/privacy_policy" />

</androidx.constraintlayout.widget.ConstraintLayout>