<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clear_bg"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/button_pause"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_back_description"
        android:foreground="@drawable/rounded_button_fg"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_back" />

    <TextView
        android:id="@+id/timer_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:background="@drawable/title_bg"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="19dp"
        android:text="@string/privacy_policy_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_pause"
        app:layout_constraintTop_toTopOf="@+id/button_pause" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/privacy_policy_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="24dp"
        android:background="@drawable/second_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_pause" />
</androidx.constraintlayout.widget.ConstraintLayout>