<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#B20F442E"
    android:focusable="true"
    android:clickable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/title_bg"
        android:paddingVertical="24dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pause_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="28sp"
            android:text="@string/game_paused" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/level_pause"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:background="@drawable/title_bg"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingVertical="19dp"
                android:text="@string/level_7_title_example"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_pause"
                app:layout_constraintEnd_toStartOf="@+id/timer_container"
                app:layout_constraintStart_toEndOf="@+id/button_pause"
                app:layout_constraintTop_toTopOf="@+id/button_pause" />

            <LinearLayout
                android:layout_width="122dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/title_bg"
                android:gravity="center"
                android:paddingVertical="19dp"
                app:layout_constraintBottom_toBottomOf="@+id/button_pause"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_pause"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/timer"
                    tools:ignore="ContentDescription"/>
                <TextView
                    android:id="@+id/pause_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/start_time_on_timer"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/button_pause"
                    app:layout_constraintEnd_toStartOf="@+id/timer_container"
                    app:layout_constraintStart_toEndOf="@+id/button_pause"
                    app:layout_constraintTop_toTopOf="@+id/button_pause" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pause_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button_pause_replay"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/replay_description"
                android:foreground="@drawable/rounded_button_fg"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/button_replay" />

            <ImageButton
                android:id="@+id/button_pause_home"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home_description"
                android:foreground="@drawable/rounded_button_fg"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/button_home" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>