<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/clear_bg"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/button_pause"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_back_description"
        android:foreground="@drawable/rounded_button_fg"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_pause" />

    <ImageButton
        android:id="@+id/debugButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_back_description"
        android:foreground="@drawable/rounded_button_fg"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/game_elements"
        app:layout_constraintStart_toEndOf="@+id/game_elements"
        app:layout_constraintTop_toTopOf="@+id/game_elements"
        app:srcCompat="@drawable/button_pause" />

    <TextView
        android:id="@+id/level_title"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="19dp"
        android:text="@string/level_7_title_example"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_pause"
        app:layout_constraintEnd_toStartOf="@+id/timer_container"
        app:layout_constraintStart_toEndOf="@+id/button_pause"
        app:layout_constraintTop_toTopOf="@+id/button_pause" />

    <LinearLayout
        android:id="@+id/timer_container"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/title_bg"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_pause"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/timer"
            tools:ignore="ContentDescription"/>
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/start_time_on_timer"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_pause"
            app:layout_constraintEnd_toStartOf="@+id/timer_container"
            app:layout_constraintStart_toEndOf="@+id/button_pause"
            app:layout_constraintTop_toTopOf="@+id/button_pause" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/game_elements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="90dp"
        android:minWidth="260dp"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:columnCount="3"
        android:background="@drawable/second_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_pause">


    </GridLayout>

    <TextView
        android:id="@+id/found"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/second_bg"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="19dp"
        android:text="@string/found_example"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/game_elements"
        app:layout_constraintStart_toStartOf="@+id/game_elements"
        app:layout_constraintTop_toBottomOf="@+id/game_elements" />

</androidx.constraintlayout.widget.ConstraintLayout>